--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,45 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+bertopic==0.16.4
 blis==1.0.1
 catalogue==2.0.10
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 cloudpathlib==0.19.0
+cmdstanpy==1.2.4
 colorama==0.4.6
 confection==0.1.5
 contourpy==1.3.0
 cycler==0.12.1
 cymem==2.0.8
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+en_core_web_sm==3.8.0
 fastapi==0.115.2
+filelock==3.16.1
 fonttools==4.54.1
+fsspec==2024.9.0
 h11==0.14.0
+hdbscan==0.8.39
+holidays==0.59
+huggingface-hub==0.25.2
 idna==3.10
+importlib_resources==6.4.5
 Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.7
 langcodes==3.4.1
 language_data==1.2.0
+llvmlite==0.43.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.1
 matplotlib==3.9.2
 mdurl==0.1.2
+mpmath==1.3.0
 murmurhash==1.0.10
+networkx==3.4.1
 nltk==3.9.1
+numba==0.60.0
 numpy==2.0.2
 packaging==24.1
 pandas==2.2.3
@@ -36,18 +48,24 @@ plotly==5.24.1
 praw==7.7.1
 prawcore==2.4.0
 preshed==3.0.9
+prophet==1.1.6
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+pynndescent==0.5.13
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 rich==13.9.2
+safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
+sentence-transformers==3.2.0
+setuptools==75.1.0
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.5
@@ -56,14 +74,20 @@ spacy==3.8.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
+stanio==0.5.1
 starlette==0.40.0
+sympy==1.13.1
 tenacity==9.0.0
 thinc==8.3.2
 threadpoolctl==3.5.0
+tokenizers==0.20.1
+torch==2.5.0
 tqdm==4.66.5
+transformers==4.45.2
 typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.2
+umap-learn==0.5.6
 update-checker==0.18.0
 urllib3==2.2.3
 uvicorn==0.32.0
